- Defined document.createElement
- Created Element class