@@ -1,0 +1,5 @@
+'use strict';
+
+class HTMLSlotElement {}
+
+module.exports = HTMLSlotElement;
