@@ -1,0 +1,5 @@
+'use strict';
+
+class NonDocumentTypeChildNode {}
+
+module.exports = NonDocumentTypeChildNode;
