@@ -1,0 +1,5 @@
+'use strict';
+
+class UndoManager {}
+
+module.exports = UndoManager;
