@@ -1,2 +1,7 @@
-- Defined document.createElement
-- Created Element class
+- Initialized Element class
+- Created HTMLSlotElement class
+- Created NamedNodeMap class
+- Created DOMTokenList class
+- Created NonDocumentTypeChildNode class
+- Created UndoManager class
+- Created ChildNode class
